--- a/src/app/layout/main-layout/main-layout.component.scss
+++ b/src/app/layout/main-layout/main-layout.component.scss
@@ -26,3 +26,10 @@ nz-footer {
   padding: 1rem;
   color: #fff;
 }
+
+ng-slider {
+  flex: 0 0 80px; 
+  max-width: 80px; 
+  min-width: 80px; 
+  width: 80px;
+}
