--- a/src/app/page/product/product-index/product-index.page.html
+++ b/src/app/page/product/product-index/product-index.page.html
@@ -1,8 +1,7 @@
-<p>product-index works!</p>
 <ng-container *ngIf="(productData$ | async) as items">
-    <div class="product__card" *ngFor="let item of items">
-        <p class="product__name">{{item.name}}</p>
-        <button nz-button nzType="primary" [routerLink]="['/product/'+item.id]"
-            routerLinkActive="router-link-active">Check</button>
+    <div class="row">
+        <div class="col-md-6 col-lg-3 col-12 mb-3" *ngFor="let item of items; let i=index">
+            <app-product-card [productData]="item"></app-product-card>
+        </div>
     </div>
 </ng-container>
