--- a/src/app/shared/component/product-card/product-card.component.html
+++ b/src/app/shared/component/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="product__card p-2">
     <nz-tabset [nzTabPosition]="'top'" [nzAnimated]="true" [nzSize]="'small'">
         <nz-tab [nzTitle]="'Overview'">
             <nz-card [nzCover]="coverTemplate" [nzActions]="[actionEllipsis, actionEdit, actionSetting]">
