set up metaData update in base component

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -7,7 +7,7 @@
       <ul nz-menu nzTheme="dark" nzMode="inline">
         <li nz-menu-item [routerLink]="['/product']">
           <span nz-icon nzType="radar-chart" nzTheme="outline"></span>
-          <span>All Product</span>
+          <span>All Products</span>
         </li>
         <li nz-submenu nzTitle="EA" nzIcon="desktop">
           <ul>
