--- a/src/app/page/product/product-index/product-index.page.scss
+++ b/src/app/page/product/product-index/product-index.page.scss
@@ -1,3 +1,8 @@
-:host ::ng-deep .slick-list {
-    max-height: 480px;
+:host ::ng-deep {
+
+    span.ant-segmented-item-icon {
+        display: inline-flex;
+        align-items: center;
+    }
+
 }
