--- a/src/app/page/product/product-index/product-index.page.html
+++ b/src/app/page/product/product-index/product-index.page.html
@@ -1,24 +1,29 @@
 <div class="row">
-    <div class="col-lg-3 col-md-6 col-12 p-lg-4 p-2">
+    <div class="col-12 d-flex justify-content-end">
+        <nz-segmented [nzOptions]="options" [(ngModel)]="layoutType"></nz-segmented>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-12 p-2">
         <nz-divider nzText="Best rating" nzOrientation="left"></nz-divider>
         <div class="best__rating__product" *ngIf="(productData$ | async) as items">
-            <div class="row">
-                <nz-carousel [nzEnableSwipe]="true" [nzLoop]="true" nzAutoPlay [nzAutoPlaySpeed]="4000"
-                    [nzDots]="false">
-                    <div nz-carousel-content *ngFor="let item of items; let i=index">
-                        <app-product-card [productData]="item"></app-product-card>
-                    </div>
-                </nz-carousel>
-            </div>
+            <ng-container *ngFor="let item of items; let i=index">
+                <ng-container *ngIf="layoutType == 1; else elseTemplate">
+                    <app-lg-product-card [productData]="item"></app-lg-product-card>
+                </ng-container>
+                <ng-template #elseTemplate>
+                    <div class="container">{{item.name}}</div>
+                </ng-template>
+            </ng-container>
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-12 p-lg-4 p-2">
+    <div class="col-lg-6 col-md-6 col-12 p-2">
         <nz-divider nzText="Free but good" nzOrientation="left"></nz-divider>
         <div class="free__product" *ngIf="(productData$ | async) as items">
 
         </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-12 p-lg-4 p-2">
+    <div class="col-lg-6 col-md-6 col-12 p-2">
         <nz-divider nzText="Best with Fee" nzOrientation="left"></nz-divider>
         <div class="Fee__product" *ngIf="(productData$ | async) as items">
 
