--- a/src/app/shared/component/lg-product-card/lg-product-card.component.scss
+++ b/src/app/shared/component/lg-product-card/lg-product-card.component.scss
@@ -1,1 +1,73 @@
+.item-thumb .image{
+    height: 100%;
+    min-width: 100%;
+    width: 189px;
+    max-width: 189px;
+    border-color: transparent;
+    background-size: cover;
+    background-position: center;
+    opacity: 1;
+    transform: translate(0);
+    transition: transform .25s,opacity .25s;
+}
 
+
+.article-item {
+    position: relative;
+    border-radius: 4px;
+    border: 1px solid darkgray;
+    overflow: hidden;
+
+    .item-content {
+
+        display: flex;
+        overflow: hidden;
+        // background-color: var(--module-bg);
+        // transition: background-color .1s;
+
+        .item-body {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            .description{
+                text-align: justify;
+            }
+
+            .category{
+                font-size: smaller;
+            }
+
+            .item-meta{
+                line-height: 2em;
+            }
+
+            .title .link {
+                max-width: 26rem;
+                margin-left: 0;
+                text-decoration: none;
+                color: inherit;
+                left: 0;
+                transition: all 0.3s ease;
+            }
+
+            .title .link:hover {
+                margin-left: 1rem;
+            }
+        }
+    }
+}
+
+
+
+@media (max-width: 600px) {
+  /* mobiles */
+  .item-thumb {
+    display: none;
+  }
+
+//   .item-body .title {
+//     color: #FFC107;
+//   }
+}
