--- a/src/app/shared/component/lg-product-card/lg-product-card.component.scss
+++ b/src/app/shared/component/lg-product-card/lg-product-card.component.scss
@@ -46,7 +46,8 @@
             .title .link {
                 max-width: 26rem;
                 margin-left: 0;
-                text-decoration: none;
+                // text-decoration: none;
+                text-decoration-line:underline;
                 color: inherit;
                 left: 0;
                 transition: all 0.3s ease;
@@ -59,6 +60,11 @@
     }
 }
 
+:host ::ng-deep {
+    .ant-divider-horizontal{
+        margin: 0.5rem 0;
+    }
+}
 
 
 @media (max-width: 600px) {
