--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg sticky-top navbar-light border-bottom  navbar__content">
+<nav class="navbar navbar-expand-lg sticky-top navbar-dark border-bottom  navbar__content">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="/home"><img src="{{logoUrl}}" alt="logo" width="40" height="40"
                 srcset=""></a>
