--- a/src/app/page/product/product-detail/product-detail.page.html
+++ b/src/app/page/product/product-detail/product-detail.page.html
@@ -1,4 +1,4 @@
-<div class="product__detail" *ngIf="(productId$ | async) as productId">
+<div class="product__detail p-3" *ngIf="(productId$ | async) as productId">
     <div class="row">
         <div class="col-12">
             <nz-tag [nzColor]="'green'">UDSAUX</nz-tag>
