--- a/src/app/shared/component/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/component/breadcrumb/breadcrumb.component.html
@@ -1,4 +1,4 @@
-<div class="py-2">
+<div class="p-2 bg-white border-top border-bottom border-1">
     <nz-breadcrumb nzSeparator=">">
         <nz-breadcrumb-item>
             <span nz-icon nzType="home" [routerLink]="['/']"></span>
