--- a/src/app/page/home/home.page.css
+++ b/src/app/page/home/home.page.css
@@ -21,3 +21,9 @@
     justify-content: center;
     max-width: 150px;
 }
+
+.green-color-gradient {
+    position: relative;
+    background-color: #f5f6f7;
+    background-image: linear-gradient(54deg, rgba(122, 191, 255, 0.25), rgba(122, 228, 255, 0) 28%), linear-gradient(241deg, rgba(152, 172, 239, 0.25), rgba(152, 153, 239, 0) 36%);
+}
