--- a/src/app/page/home/home.page.html
+++ b/src/app/page/home/home.page.html
@@ -3,10 +3,10 @@
         <div class="row">
             <div class="col-xl-6 col-12">
                 <h2 class="cs__text-3 pb-3" gsapFadeIn [delay]="0.2" [duration]="0.5" [direct]="'s'">
-                    Access all of the best FX support products from Japan
+                    Access all of the best FX Expert Advisors and Indicators from Japan
                 </h2>
                 <h5 class="cs__text-2 pb-3" gsapFadeIn [delay]="0.6" [duration]="0.5" [direct]="'s'">
-                    Tone resources that we have tried and will definitely continue using. All with reviews, useage and
+                    Ton of resources that we have tried and will definitely continue using. All with reviews, useage and
                     detail manual.
                 </h5>
                 <div class="cs__cta-1 cs__pointer" [routerLink]="['/product']" routerLinkActive="router-link-active"
@@ -21,26 +21,40 @@
         </div>
     </div>
 </div>
-<div class="section">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-7 col-md-12 col-12 p-3">
-                <nz-divider nzText="Best rating" nzOrientation="left"></nz-divider>
-                <div class="best__rating__product" *ngIf="(productData$ | async) as items">
-                    <ng-container *ngFor="let item of items; let i=index">
-                        <ng-container>
-                            <app-lg-product-card [productData]="item"></app-lg-product-card>
-                        </ng-container>
-                    </ng-container>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xl-6 col-md-12 col-12 p-3">
+            <nz-divider nzText="Best rating" nzOrientation="left"></nz-divider>
+
+            <div class="best__rating__product" *ngIf="(productData$ | async) as items">
+                <nz-tabset [nzTabPosition]="!(isHandset$ | async) ? 'left' : 'top'">
+                    <nz-tab *ngFor="let tab of [0,1]" [nzTitle]="'' + (tab+1)">
+                        <app-lg-product-card [productData]="items[tab]"></app-lg-product-card>
+                    </nz-tab>
+                </nz-tabset>
+            </div>
+        </div>
+        <div class="col-xl-4 p-3">
+            <nz-divider nzText="New product" nzOrientation="left"></nz-divider>
+            <div class="new__product" style="height: 200px;"></div>
+            <nz-divider nzText="Best user" nzOrientation="left"></nz-divider>
+            <div class="best__urer" style="height: 200px;"></div>
+            <nz-divider nzText="Suggest" nzOrientation="left"></nz-divider>
+            <div class="suggest" style="height: 200px;"></div>
+        </div>
+        <div class="col-xl-2 p-3 ms-auto" *ngIf="!(isHandset$ | async)">
+            <div class="promotion__banner green-color-gradient p-3 text-center" gsapFadeIn [delay]="2.75"
+                [duration]="0.75" [direct]="'e'" style="height: 500px;">
+                <p class="fs-1 cs__text-2" gsapFadeIn [delay]="3" [duration]="0.75" [direct]="'e'">Choose wisely</p>
+                <p class="fs-1 cs__text-2" gsapFadeIn [delay]="3.5" [duration]="0.75" [direct]="'e'">Escape the matrix
+                </p>
+                <p class="fs-1 cs__text-2" gsapFadeIn [delay]="4" [duration]="0.75" [direct]="'e'">Find freedom</p>
+            </div>
+            <div class="email__subscriber light-color-gradient p-3 mt-3">
+                <div class="row">
+                    <app-email-sub></app-email-sub>
                 </div>
-            </div>
-            <div class="col-xl-3 p-3">
-                <p style="height: 200px;">New product</p>
-                <p style="height: 200px;">Popular developer</p>
-                <p style="height: 200px;">Suggest</p>
-            </div>
-            <div class="col-xl-2 p-3 ms-auto">
-                <p class="light-color-gradient" style="height: 100%;">promotion right banner</p>
             </div>
         </div>
     </div>
