--- a/src/app/shared/component/lg-product-card/lg-product-card.component.html
+++ b/src/app/shared/component/lg-product-card/lg-product-card.component.html
@@ -1,27 +1,31 @@
-<div class="article-item p-lg-3 p-3 mb-3 bg-light">
+<div class="article-item p-lg-2 p-2 mb-2">
     <div class="item-content">
         <a class="item-thumb" [routerLink]="'/product/'+productData.id+'-'+blogSlug"
             routerLinkActive="router-link-active">
             <div class="image" [ngStyle]="{'background-image': 'url(' + productData.image + ')'}"></div>
         </a>
-        <div class="item-body px-lg-3">
+        <div class="item-body px-lg-2">
             <div class="item-body-content">
-                <div class="category">
-                    <nz-tag [nzColor]="'blue'" *ngFor="let item of productData.category.split(',')">{{item}}</nz-tag>
+                <div class="card__header row">
+                    <div class="category col-12">
+                        <nz-tag [nzColor]="'blue'"
+                            *ngFor="let item of productData.category.split(',')">{{item}}</nz-tag>
+                        <nz-rate [ngModel]="productData.rating" nzAllowHalf nzDisabled></nz-rate>
+                    </div>
                 </div>
                 <nz-divider [nzPlain]="true"></nz-divider>
-                <h2 class="title fs-3">
+                <h2 class="title fs-4">
                     <a [routerLink]="'/product/'+productData.id+'-'+blogSlug" class="link" title="{{productData.name}}">
                         {{productData.name}}
                     </a>
                 </h2>
-                <p class="description fs-6">{{productData.description}}</p>
+                <p class="description fs-6 d-none d-lg-block">{{productData.description}}</p>
             </div>
             <nz-divider [nzPlain]="true"></nz-divider>
             <div class="row item-meta">
-                <span class="col-lg-3 col-6 date">
+                <!-- <span class="col-lg-3 col-6 date">
                     <i class="fa-regular fa-clock me-1"></i>{{productData.created_at | date:'short'}}
-                </span>
+                </span> -->
                 <span class="col-lg-3 col-6 author">
                     <i class="fa-regular fa-pen-to-square me-1"></i> by <strong>{{productData.author}}</strong>
                 </span>
