--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -1,5 +1,4 @@
-<!-- not-done-yet -->
-<div class="row bg-white px-3 p-2">
+<div class="row bg-white py-2 m-0">
     <div class="col">
         <h1 class="fs-3" *ngIf="header.title">{{header.title}}</h1>
     </div>
