--- a/src/app/page/home/home.page.css
+++ b/src/app/page/home/home.page.css
@@ -22,6 +22,19 @@
     max-width: 150px;
 }
 
+.cs__cta-2 {
+    padding: 0.75rem;
+    color: var(--cs-color-text);
+    background-color: var(--cs-color-primary);
+    font-size: larger;
+    font-family: var(--cs-second-font);
+    border-radius: 10px;
+    
+    display: flex;
+    justify-content: center;
+    max-width: 150px;
+}
+
 .green-color-gradient {
     position: relative;
     background-color: #f5f6f7;
