--- a/src/app/page/about/about.page.html
+++ b/src/app/page/about/about.page.html
@@ -1,3 +1,58 @@
 <div class="container">
-    <p>About's content</p>
+    <div class="row justify-content-between p-3 pb-5">
+        <div class="col-xl-6" gsapFadeIn [delay]="0.2" [duration]="0.5" [direct]="'s'">
+            <h2>Who we are</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="0.2" [duration]="0.5"
+            [direct]="'e'">
+            <img src="/assets/undraw_team_spirit_re_yl1v.svg" alt="who we are" height="150" />
+        </div>
+    </div>
+
+    <div class="row justify-content-between p-3 pb-5">
+        <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="0.8" [duration]="0.5"
+            [direct]="'s'">
+            <img src="/assets/undraw_team_spirit_re_yl1v.svg" alt="who we are" height="150" />
+        </div>
+        <div class="col-xl-6" gsapFadeIn [delay]="0.8" [duration]="0.5" [direct]="'e'">
+            <h2>What we do</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+    </div>
+
+    <div class="row justify-content-between p-3">
+        <div class="col-xl-6" gsapFadeIn [delay]="1.3" [duration]="0.5" [direct]="'s'">
+            <h2>Disclaimer</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                the
+                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+                into
+                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+                release of
+                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+                Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="1.3" [duration]="0.5"
+            [direct]="'e'">
+            <img src="/assets/undraw_team_spirit_re_yl1v.svg" alt="who we are" height="150" />
+        </div>
+    </div>
 </div>
