--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,12 @@ nz-content {
 .inner-content {
     padding: 0px !important;
 }
+
+.ql-snow .ql-editor img{
+  height: auto !important;
+}
+
+
+.ql-container {
+  font-size: 1rem !important;
+}
