--- a/src/app/page/about/about.page.html
+++ b/src/app/page/about/about.page.html
@@ -1,4 +1,11 @@
 <div class="container">
+    <div class="text-center pt-3">
+        <h2>All You Need To Know About Us</h2>
+    </div>
+    <div class="text-center pb-3">
+        <h4 class="lead"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                ut.</em></h4>
+    </div>
     <div class="row justify-content-between p-3 pb-5">
         <div class="col-xl-6" gsapFadeIn [delay]="0.2" [duration]="0.5" [direct]="'s'">
             <h2>Who we are</h2>
@@ -18,11 +25,7 @@
         </div>
     </div>
 
-    <div class="row justify-content-between p-3 pb-5">
-        <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="0.8" [duration]="0.5"
-            [direct]="'s'">
-            <img src="/assets/undraw_team_spirit_re_yl1v.svg" alt="who we are" height="150" />
-        </div>
+    <div class="row flex-row-reverse justify-content-between p-3 pb-5">
         <div class="col-xl-6" gsapFadeIn [delay]="0.8" [duration]="0.5" [direct]="'e'">
             <h2>What we do</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
@@ -34,6 +37,10 @@
                 release of
                 Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
                 Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+        <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="0.8" [duration]="0.5"
+            [direct]="'s'">
+            <img src="/assets/undraw_work_time_re_hdyv.svg" alt="who we are" height="150" />
         </div>
     </div>
 
@@ -52,7 +59,7 @@
         </div>
         <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="1.3" [duration]="0.5"
             [direct]="'e'">
-            <img src="/assets/undraw_team_spirit_re_yl1v.svg" alt="who we are" height="150" />
+            <img src="/assets/undraw_access_denied_re_awnf.svg" alt="who we are" height="150" />
         </div>
     </div>
 </div>
