--- a/src/app/shared/component/loader-spiner/loader-spiner.component.scss
+++ b/src/app/shared/component/loader-spiner/loader-spiner.component.scss
@@ -1,5 +1,5 @@
 .spinner__overlay {
-    position: fixed;
+    position: absolute;
     display: block;
     width: 100%;
     height: 100%;
@@ -9,9 +9,15 @@
     z-index: 99999 !important;
 }
 
-.spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+:host ::ng-deep {
+    .ant-spin-dot-spin {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size:48px;
+    }
+    .ant-spin-dot-item{
+        height: 18px !important;
+        width: 18px !important;
+    }
 }
