fix new blog done

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -16,7 +16,7 @@
           <span nz-icon nzType="search" nzTheme="outline"></span>
           <span>Search</span>
         </li>
-        <li nz-menu-item [routerLink]="['/blog']">
+        <li nz-menu-item [routerLink]="['/blog/all']">
           <span nz-icon nzType="edit" nzTheme="outline"></span>
           <span>Blog</span>
         </li>
