--- a/src/app/page/blog/components/blog-card/blog-card.component.html
+++ b/src/app/page/blog/components/blog-card/blog-card.component.html
@@ -5,8 +5,8 @@
         </a>
         <div class="item-body px-lg-3">
             <div class="item-body-content">
-                <h5 class="description">{{blogData.sub_title}}</h5>
-                <h2 class="title">
+                <h6 class="description">{{blogData.sub_title}}</h6>
+                <h2 class="title fs-4">
                     <a [routerLink]="'/blog/'+blogData.id+'-'+blogSlug" class="link" title="{{blogData.name}}">
                         {{blogData.name}}
                     </a>
