add mypage and mypage/blog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <nz-back-top [nzVisibilityHeight]="300"></nz-back-top>
+<app-loader-spiner></app-loader-spiner>
 <app-main-layout>
     <router-outlet></router-outlet>
 </app-main-layout>
