--- a/src/app/shared/component/loader-spiner/loader-spiner.component.html
+++ b/src/app/shared/component/loader-spiner/loader-spiner.component.html
@@ -1,3 +1,4 @@
 <div *ngIf="isLoading | async" class="spinner__overlay">
+    <!-- <div *ngIf="true" class="spinner__overlay"> -->
     <nz-spin nzSimple [nzSize]="'large'"></nz-spin>
 </div>
