--- a/src/app/shared/component/loader-spiner/loader-spiner.component.scss
+++ b/src/app/shared/component/loader-spiner/loader-spiner.component.scss
@@ -1,8 +1,7 @@
 .spinner__overlay {
-    position: absolute;
-    display: block;
+    position: fixed;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     top: 0;
     left: 0;
     background-color: rgba(74, 74, 74, .3);
